# SmartVision

./: CMakeLists.txt  README.md
acquisition/: CMakeLists.txt  acquisitionModule.h
common/: CMakeLists.txt  configurator.cpp  configurator.h  observable.h  observerDelegator.h  testingDelegator.cpp  window.h
default/: CMakeLists.txt  configure.cpp  configure.xml  main.cpp
faceDetection/: CMakeLists.txt
